RC137 - rewrite and ProtoWeaver upstream